# namefence

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: checks.md
examples/: README.md  demo.sh
scripts/: smoke.sh
src/: checks.rs  cli.rs  engine.rs  fixname.rs  lib.rs  main.rs  report.rs  rules.rs  unicode.rs  unicode_data.rs  walker.rs
tests/: cli.rs
